# VisualEditor

./: .gitignore  CMakeLists.txt  README.md  cd.drawio
Include/: CircleShape.hpp  Command.hpp  EditorController.hpp  EditorView.hpp  EditorWindow.hpp  GroupShape.hpp  LineShape.hpp  ProjectController.hpp  ProjectView.hpp  QuadShape.hpp  SelectedShape.hpp  Shape.hpp  ShapeFactory.hpp  Storage.hpp  Texture.hpp  TriangleShape.hpp  Window.hpp  pch.hpp
Source/: CircleShape.cpp  Command.cpp  EditorController.cpp  EditorView.cpp  EditorWindow.cpp  GroupShape.cpp  LineShape.cpp  ProjectController.cpp  ProjectView.cpp  QuadShape.cpp  SelectedShape.cpp  Shape.cpp  ShapeFactory.cpp  TriangleShape.cpp  Window.cpp  main.cpp
